--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   
   <body>
-    <p>Hi! Poop on ya, Tonya!</p>
+    <h1>Ami Schroeder</h1>
+    <h3>1755 Beech St
+        St.Paul, MN 55106
+        651-323-3113</h3>
   </body>
 </html>
