--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   
   <body>
     <h1>Ami Schroeder</h1>
-    <h3>1755 Beech St
-        St.Paul, MN 55106
-        651-323-3113</h3>
+    <h3>1755 Beech St<br>St.Paul, MN 55106<br>651-323-3113</h3>
   </body>
 </html>
