--- a/index.html
+++ b/index.html
@@ -12,5 +12,26 @@
     <p>Detail-oriented self-starter with versatile skill set. Excellent written and oral communication skills with a mindset of 
       creating efficient and user friendly products.</p>
     <h2>Professional Experience</h2>
+    <h3>Temp Social Work</h3>
+    <h4>Home Care/Long-term Care Social Worker<br>November 2016-Present</h4>
+    <ul>
+      <li>Complete assessments, care plans, and casenotes according to MDS guidelines</li>
+      <li>Lead care conferences, investigate care concerns, and follow-up with care team as needed</li>
+      <li>Mediate conflicts, provide referrals to community resources, and ensure health and safety needs are being met</li>
+    </ul>
+    <h3>West Asia Care</h3>
+    <h4>Qualified Professional<br>March 2016-Present</h4>
+    <ul>
+      <li>Conduct home visits to ensure client satisfaction, provide referrals, ensure health needs are met, and document health changes</li>
+      <li>Manage and mentor Personal Care Assistants within agency</li>
+    </ul>
+    <h3>Thomas Allen Inc</h3>
+    <h4>Case Manager<br>June 2014-March 2016</h4>
+    <ul>
+      <li>Conducted eligibility assessments, verified client insurance, and entered client data into billing systems</li>
+      <li>Created and monitored care plans, coordinate home care services, order medical equipment, connected clients with community resources</li>
+    </ul>      
+      
+    
   </body>
 </html>
