--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   </head>
   
   <body>
-    <div class="container">
-      <div class="heading">
+    <div class="heading">
         <h1>Ami Schroeder</h1>
         <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113</h4>
-        <p>Detail-oriented self-starter with versatile skill set. Excellent written and oral communication skills with a mindset of 
+    </div>
+    <div class="profile">
+      <p>Detail-oriented self-starter with versatile skill set. Excellent written and oral communication skills with a mindset of 
       creating efficient and user friendly products.</p>
-      </div>
-      <div class="main">
+    </div>
+    <div class="main">
         <h2>Professional Experience</h2>
         <h3>Temp Social Work</h3>
         <h4>Home Care/Long-term Care Social Worker<br>November 2016-Present</h4>
@@ -34,7 +35,6 @@
           <li>Conducted eligibility assessments, verified client insurance, and entered client data into billing systems</li>
           <li>Created and monitored care plans, coordinate home care services, order medical equipment, connected clients with community resources</li>
         </ul>   
-      </div>
     </div>
   </body>
 </html>
