--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="heading">
         <h1>Ami Schroeder</h1>
         <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113</h4>
-        <a href="http://tinypic.com?ref=301ofgj" target="_blank"><img src="http://i66.tinypic.com/301ofgj.jpg" border="0" alt="Image and video hosting by TinyPic"></a>
+        <img class="thumbnail" src="http://i66.tinypic.com/301ofgj.jpg">
     </div>
     <div class="profile">
       <p>Detail-oriented self-starter with versatile skill set. Excellent written and oral communication skills with a mindset of 
