--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   
   <body>
     <div class="heading">
-        <h1>Ami Schroeder</h1><img class="thumbnail" src="http://i66.tinypic.com/2hn75mf.jpg">
-        <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113</h4>
+      <img class="thumbnail" src="http://i66.tinypic.com/2hn75mf.jpg">
+      <h1>Ami Schroeder</h1>
+      <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113</h4>
     </div>
     <div class="profile">
       <p>Detail-oriented self-starter with versatile skill set. Excellent written and oral communication skills with a mindset of 
