--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <body>
     <div class="heading">
-      <img class="thumbnail" src="http://i66.tinypic.com/2hn75mf.jpg">
+      <img src="http://i66.tinypic.com/2hn75mf.jpg" align="left">
       <h1>Ami Schroeder</h1>
       <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113</h4>
     </div>
