Add image margins

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <body>
     <div class="heading">
-      <img src="http://i66.tinypic.com/2hn75mf.jpg" width="220" height="220" align="left" hspace="20">
+      <img src="http://i66.tinypic.com/2hn75mf.jpg" width="220" height="220" align="left" style="margin:0px 50px">
       <h1>Ami Schroeder</h1>
       <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113</h4>
       <hr>
