Rearrange text try

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </div>
     
     <div class="main">
-        <h2>Professional Experience</h2>
-        <h3>Temp Social Work</h3>
+        <h3>Work Experience</h3><h3>Temp Social Work</h3>
         <h4>Home Care/Long-term Care Social Worker<br>November 2016-Present</h4>
         <ul>
           <li>Complete assessments, care plans, and casenotes according to MDS guidelines</li>
