--- a/index.html
+++ b/index.html
@@ -20,14 +20,21 @@
     </div>
     
     <div class="main">
+      <div class="1column">
         <h2>Work Experience</h2>
+      </div>
+      <div class="2column">
         <h3>Temp Social Work</h3>
-        <h4>Home Care/Long-term Care Social Worker<br>November 2016-Present</h4>
+        <h4>Home Care/Long-term Care Social Worker</h4>
         <ul>
           <li>Complete assessments, care plans, and casenotes according to MDS guidelines</li>
           <li>Lead care conferences, investigate care concerns, and follow-up with care team as needed</li>
           <li>Mediate conflicts, provide referrals to community resources, and ensure health and safety needs are being met</li>
         </ul>
+      </div>
+      <div class="3column">
+        <h4>November 2016-Present</h4>
+      </div>
         <h3>West Asia Care</h3>
         <h4>Qualified Professional<br>March 2016-Present</h4>
         <ul>
