Change main div names

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </div>
     
     <div class="main">
-      <div class="1column">
+      <div class="first">
         <h2>Work Experience</h2>
       </div>
-      <div class="2column">
+      <div class="second">
         <h3>Temp Social Work</h3>
         <h4>Home Care/Long-term Care Social Worker</h4>
         <ul>
@@ -32,7 +32,7 @@
           <li>Mediate conflicts, provide referrals to community resources, and ensure health and safety needs are being met</li>
         </ul>
       </div>
-      <div class="3column">
+      <div class="third">
         <h4>November 2016-Present</h4>
       </div>
         <h3>West Asia Care</h3>
