Try br float left

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     
     <div class="main">
       <div class="first">
-        <h2>Work Experience</h2>
+        <h2>Work Experience <br> float:left;</h2>
       </div>
       <div class="second">
-        <h3>Temp Social Work</h3>
-        <h4>Home Care/Long-term Care Social Worker</h4>
+        <h3>Temp Social Work <br> float:left;</h3>
+        <h4>Home Care/Long-term Care Social Worker <br> float:left;</h4>
         <ul>
           <li>Complete assessments, care plans, and casenotes according to MDS guidelines</li>
           <li>Lead care conferences, investigate care concerns, and follow-up with care team as needed</li>
