--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="header">
           <img src="http://i66.tinypic.com/2hn75mf.jpg" width="220" height="220" align="left" style="margin:0px 50px 0px 0px">
           <h1>Ami Schroeder</h1>
-          <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113</h4>
+          <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113<br>arschroeder22@gmail.com</h4>
           <p>Detail-oriented self-starter with versatile skill set. Excellent written and oral communication skills with a mindset of 
       creating efficient and user friendly products.</p>
           <hr>
