Add west Asia to main content

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
           <li>Lead care conferences, investigate care concerns, and follow-up with care team as needed</li>
           <li>Mediate conflicts, provide referrals to community resources, and ensure health and safety needs are being met</li>
         </ul>
+        <h3>West Asia Care</h3>
+      <h4>Qualified Professional</h4>
+      <ul>
+        <li>Train, monitor, and manage Personal Care Assistants</li>
+        <li>Conduct home visits to ensure client safety and satisfaction</li>
+      </ul>
+      
     </div>
     
     <div id="secondary">
