--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div id="secondary">
         <p>Secondary Sidebar</p>
         <h4>November 2016-Present</h4>
+      <h4>March 2016-Present</h4>
     </div>
   </div>
   </body>
