Try span with color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li>Mediate conflicts, provide referrals to community resources, and ensure health and safety needs are being met</li>
         </ul>
         <h3>West Asia Care</h3>
-      <h4>Qualified Professional</h4>
+      <h4><span style="color:#52658F">Qualified Professional</span></h4>
       <ul>
         <li>Train, monitor, and manage Personal Care Assistants</li>
         <li>Conduct home visits to ensure client safety and satisfaction</li>
