Add Thomas Allen info

--- a/index.html
+++ b/index.html
@@ -22,18 +22,24 @@
     </div>
     
     <div id="content">
-        <h3>Temp Social Work</h3>
+      <h3>Temp Social Work</h3>
       <h4><span style="color:#52658F">Home Care/Long-term Care Social Worker</span></h4>
         <ul>
           <li>Complete assessments, care plans, and casenotes according to MDS guidelines</li>
           <li>Lead care conferences, investigate care concerns, and follow-up with care team as needed</li>
           <li>Mediate conflicts, provide referrals to community resources, and ensure health and safety needs are being met</li>
         </ul>
-        <h3>West Asia Care</h3>
+      <h3>West Asia Care</h3>
       <h4><span style="color:#52658F">Qualified Professional</span></h4>
       <ul>
         <li>Train, monitor, and manage Personal Care Assistants</li>
         <li>Conduct home visits to ensure client safety and satisfaction</li>
+      </ul>
+      <h3>Thomas Allen Inc</h3>
+      <h4><span style="color:#52658F">Case Manager</span></h4>
+      <ul>
+        <li>Conducted eligibility assessments, verified cliient insurance, entered client data into billing systems</li>
+        <li>Created and monitored care plans, coordinated home care services, ordered medical equpiment, and connected clients with community resources</li>
       </ul>
       
     </div>
@@ -51,6 +57,17 @@
       <br>
       <br>
       <h4>March 2016-Present</h4>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <h4>June 2014-March 2016</h4>
     </div>
   </div>
   </body>
