Add h4 under education

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     
     <div id="seccontent">
       <h3>University of St. Thomas</h3>
+      <h4><span style="color:#52658F">Bachelor's in Social Work, Minor in Psychology</span></h4>
     </div>
     
     <div id="secsecondary">
