Add Century and MSA

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
     <div id="seccontent">
       <h3>University of St. Thomas</h3>
       <h4><span style="color:#52658F">Bachelor's in Social Work, Minor in Psychology</span></h4>
+      <h3>Century College</h3>
+      <h4><span style="color:#52658F">Post Secondary Enrollment Option as Highschool Junior/Senior</span></h4>
+      <h3>Math and Science Academy</h3>
+      <h4><span style="color:#52658F">Junior High & High School</span></h4>
     </div>
     
     <div id="secsecondary">
