--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <br>
       <br>
       <br>
-      <h4>March 2016-Present</h4>
+      <h4>March 2016-March 2017</h4>
       <br>
       <br>
       <br>
@@ -81,6 +81,8 @@
     
     <div id="secsecondary">
       <h4>September 2010-May 2014</h4>
+      <h4>August 2008-May 2010</h4>
+      <h4>September 2004-May 2010</h4>
     </div>
     
   </div>
