Make education location h4

--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@
     
     <div id="seccontent">
       <h3>University of St. Thomas</h3>
+      <h4><span style="color:#52658F">St. Paul, MN</span></h4>
       <ul>
-        <li>St. Paul, MN</li>
         <li>Bachelor's Degree- Major Social Work, Minor Psychology</li>
         <li>GPA</li>
       </ul>
       <h3>Century College</h3>
+      <h4><span style="color:#52658F">White Bear Lake, MN</span></h4>
       <ul>
-        <li>White Bear Lake, MN</li>
         <li>Post Secondary Enrollment Option as Highschool Junior/Senior</li>
         <li>GPA</li>
       </ul>
       <h3>Math and Science Academy</h3>
+      <h4><span style="color:#52658F">Woodbury, MN</span></h4>
       <ul>
-        <li>Woodbury, MN</li>
         <li>Junior High & High School</li>
         <li>GPA</li>
       </ul>
