--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
         <li>Bachelor's Degree- Major Social Work, Minor Psychology</li>
         <li>GPA</li>
       </ul>
+      <h3>Bond University</h3>
+      <h4><span style="color:#52658F">Queensland, Australia</span></h4>
+      <ul>
+        <li>Semester Study Abroad</li>
+        <li>GPA</li>
+      </ul>
       <h3>Century College</h3>
       <h4><span style="color:#52658F">White Bear Lake, MN</span></h4>
       <ul>
@@ -94,6 +100,8 @@
     
     <div id="secsecondary">
       <h4>September '10 - May '14</h4>
+      <br>
+      <h4>January '12 - May '12</h4>
       <br>
       <h4>August '08 - May '10</h4>
       <br>
