--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h4><span style="color:#52658F">St. Paul, MN</span></h4>
       <ul>
         <li>Bachelor's Degree- Major Social Work, Minor Psychology</li>
-        <li>GPA</li>
+        <li>Major GPA: 3.95, Overall GPA: 3.76</li>
       </ul>
       <h3>Bond University</h3>
       <h4><span style="color:#52658F">Queensland, Australia</span></h4>
