--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h3>Bond University</h3>
       <h4><span style="color:#52658F">Queensland, Australia</span></h4>
       <ul>
-        <li>Semester Study Abroad</li>
+        <li>Study Abroad</li>
         <li>GPA</li>
       </ul>
       <h3>Math and Science Academy</h3>
