Add Bond GPA and magna

--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
       <ul>
         <li>Bachelor's Degree- Major Social Work, Minor Psychology</li>
         <li>Major GPA: 3.95, Overall GPA: 3.76</li>
+        <li>Magna Cum Laude honors</li>
       </ul>
       <h3>Bond University</h3>
       <h4><span style="color:#52658F">Queensland, Australia</span></h4>
       <ul>
         <li>Study Abroad</li>
-        <li>GPA</li>
+        <li>GPA 3.33</li>
       </ul>
       <h3>Math and Science Academy</h3>
       <h4><span style="color:#52658F">Woodbury, MN</span></h4>
