--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <h3>West Asia Care</h3>
       <h4><span style="color:#52658F">Qualified Professional</span></h4>
       <ul>
-        <li>Train, monitor, and manage Personal Care Assistants</li>
-        <li>Conduct home visits to ensure client safety and satisfaction</li>
+        <li>Trained, monitored, and managed Personal Care Assistants</li>
+        <li>Conducted home visits to ensure client safety and satisfaction</li>
       </ul>
       <h3>Thomas Allen Inc</h3>
       <h4><span style="color:#52658F">Case Manager</span></h4>
