--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <h4><span style="color:#52658F">Woodbury, MN</span></h4>
       <ul>
         <li>Junior High & High School</li>
-        <li>GPA</li>
+        <li>GPA 3.78</li>
       </ul>
     </div>
     
