--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <br>
           <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113<br>arschroeder22@gmail.com</h4>
           <br>
-          <p>Dedicated and motivated self-starter with versatile skill set. Excellent written and oral communication skills mixed with a proactive attitude and strong desire to learn looking to apply my 3 years of client-facing experience, organizational skills, and expertise in creating more user-friendly services.</p>
+          <p>Dedicated and motivated self-starter with versatile skill set. Excellent written and oral communication skills mixed with a proactive attitude and strong desire to learn. Looking to apply my 3 years of client-facing experience, organizational skills, and expertise in creating more user-friendly services.</p>
           <hr>
     </div>
     
