Mom's wording edit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <br>
           <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113<br>arschroeder22@gmail.com</h4>
           <br>
-          <p>Dedicated and motivated self-starter with versatile skill set. Excellent written and oral communication skills mixed with a proactive attitude and strong desire to learn. Looking to apply my 3 years of client-facing experience, organizational skills, and expertise in creating more user-friendly services.</p>
+          <p>Dedicated and motivated self-starter with versatile skill set. Excellent written and oral communication skills integrated with a proactive attitude and strong desire to learn. Looking to apply my 3 years of client-focused experience, organizational skills, and aptitude in creating more user-friendly services.</p>
           <hr>
     </div>
     
@@ -26,7 +26,7 @@
       <h3>Temp Social Work</h3>
       <h4><span style="color:#52658F">Home Care/Long-term Care Social Worker</span></h4>
         <ul>
-          <li>Complete assessments, care plans, and casenotes according to MDS guidelines</li>
+          <li>Complete assessments, care plans, and casenotes according to Minimum Data Set guidelines</li>
           <li>Lead care conferences, investigate care concerns, and follow-up with care team as needed</li>
           <li>Mediate conflicts, provide referrals to community resources, and ensure health and safety needs are being met</li>
         </ul>
