--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <img src="http://i66.tinypic.com/2hn75mf.jpg" width="220" height="220" align="left" style="margin:0px 50px 0px 0px">
           <h1>Ami Schroeder</h1>
           <br>
-          <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113<br>arschroeder22@gmail.com</h4>
+          <h4>1755 Beech St<br>St. Paul, MN 55106<br>651-323-3113<br><a href="mailto:arschroeder22@gmail.com">arschroeder22@gmail.com</a></h4>
           <br>
           <p>Dedicated and motivated self-starter with versatile skill set. Excellent written and oral communication skills integrated with a proactive attitude and strong desire to learn. Looking to apply my 3 years of client-focused experience, organizational skills, and aptitude in creating more user-friendly services.</p>
           <hr>
