Spelling and hide source

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h3>Thomas Allen Inc</h3>
       <h4><span style="color:#52658F">Case Manager</span></h4>
       <ul>
-        <li>Conducted eligibility assessments, verified cliient insurance, entered client data into billing systems</li>
+        <li>Conducted eligibility assessments, verified client insurance, entered client data into billing systems</li>
         <li>Created and monitored care plans, coordinated home care services, ordered medical equpiment, and connected clients with community resources</li>
       </ul>
       
@@ -113,4 +113,4 @@
   </div>
   </body>
 </html>
-/* Background pattern from Subtle Patterns */
+<!--Background pattern from Subtle Patterns-->
