--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <li>Magna Cum Laude honors</li>
       </ul>
       <h3>Bond University</h3>
-      <h4><span style="color:#52658F">Queensland, Australia</span></h4>
+      <h4><span style="color:#52658F">Gold Coast, Australia</span></h4>
       <ul>
         <li>Study Abroad</li>
         <li>GPA 3.33</li>
