--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li>Lead care conferences, investigate care concerns, and follow-up with care team as needed</li>
           <li>Mediate conflicts, provide referrals to community resources, and ensure health and safety needs are being met</li>
         </ul>
-      <h3>West Asia Care</h3>
+      <h3><a href="https://www.minnesotahelp.info/Providers/West_Asia_Care_LLC/Personal_Care_Assistant_PCA/1?returnUrl=%2FSpecialTopics%2FSeniors%2F19352%3F%253fstart%3D2701%26start%3D2081">West Asia Care</a></h3>
       <h4><span style="color:#52658F">Qualified Professional</span></h4>
       <ul>
         <li>Trained, monitored, and managed Personal Care Assistants</li>
