--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li>Trained, monitored, and managed Personal Care Assistants</li>
         <li>Conducted home visits to ensure client safety and satisfaction</li>
       </ul>
-      <h3>Thomas Allen Inc</h3>
+      <h3><a href="http://www.thomasalleninc.com">Thomas Allen Inc</a></h3>
       <h4><span style="color:#52658F">Case Manager</span></h4>
       <ul>
         <li>Conducted eligibility assessments, verified client insurance, entered client data into billing systems</li>
@@ -72,20 +72,20 @@
     </div>
     
     <div id="seccontent">
-      <h3>University of St. Thomas</h3>
+      <h3><a href="http://www.stthomas.edu">University of St. Thomas</a></h3>
       <h4><span style="color:#52658F">St. Paul, MN</span></h4>
       <ul>
         <li>Bachelor's Degree- Major Social Work, Minor Psychology</li>
         <li>Major GPA: 3.95, Overall GPA: 3.76</li>
         <li>Magna Cum Laude honors</li>
       </ul>
-      <h3>Bond University</h3>
+      <h3><a href="https://bond.edu.au">Bond University</a></h3>
       <h4><span style="color:#52658F">Gold Coast, Australia</span></h4>
       <ul>
         <li>Study Abroad</li>
         <li>GPA 3.33</li>
       </ul>
-      <h3>Math and Science Academy</h3>
+      <h3><a href="https://www.mnmsa.org">Math and Science Academy</a></h3>
       <h4><span style="color:#52658F">Woodbury, MN</span></h4>
       <ul>
         <li>Junior High & High School</li>
